# ParachuteEncoder

./: .gitignore  CMakeLists.txt  README.md  files.txt  resources.qrc
include/: BinaryGridView.h  ParachuteController.h  ParachuteModel.h  ParachuteView.h  SettingsManager.h  ui_parachute.h
src/: ParachuteController.cpp  ParachuteModel.cpp  ParachuteView.cpp  main.cpp  parachute.ui  style.qss
translations/: parachute_fr.qm  parachute_fr.ts
